# red_black_gauss_seidel

./: CMakeLists.txt  README.md  helper.h  main.cpp  rb_ompfor.cpp  rb_ompfor.h  rb_ompss.cpp  rb_task.cpp  rb_task.h
